tests/errors/semantic/test_semantic_12_do_while_condition_not_logical.f90
program test_semantic_12_do_while_condition_not_logical
  implicit none
  integer :: i
  i = 0
  do while (i)
    i = i + 1
  end do
end program test_semantic_12_do_while_condition_not_logical
